# wbor-failsafe-notifier

./: .env.example  .env.sample  .gitignore  Makefile  README.md  config.py  failsafe.py  generate_service.sh  pyproject.toml  requirements.txt  wbor-failsafe-notifier.service
.github/workflows/: ci.yml
health_check_monitor/: .env.example  Dockerfile  Makefile  README.md  consumer.py  docker-compose-with-rabbitmq.yml  docker-compose.yml  healthcheck.py  requirements.txt  test_health.sh
utils/: logging.py  rabbitmq_consumer.py  rabbitmq_publisher.py
